[gd_scene load_steps=5 format=4 uid="uid://bigerk1x31mm"]

[ext_resource type="TileSet" uid="uid://cxctyyvggb2rn" path="res://resources/tileset/rpg.tres" id="1_8kl0y"]
[ext_resource type="Script" uid="uid://dg6o31rdx0cwk" path="res://scene/rpg/room_2/room_2.gd" id="1_yauhn"]
[ext_resource type="PackedScene" uid="uid://dorj7lqqborwe" path="res://components/rpg_character/rpg_character.tscn" id="2_4x5x6"]
[ext_resource type="PackedScene" uid="uid://yabt77v1e24" path="res://components/sign/sign.tscn" id="4_ls2sr"]

[node name="Room2" type="Node2D"]
script = ExtResource("1_yauhn")
starting_dialog = Array[String](["Is that a sign?", "I should be able to interact with it by pressing E."])
sign_interacted_with_dialog = Array[String](["Why didn't it work?", "I wonder if I can do what I did with the mirror to it..."])
main_scene_path = "uid://qnyb2scyb83k"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAATAAoAAAAJAAIAAAATAAkAAAAJAAEAAAATAAgAAAAJAAEAAAATAAcAAAAJAAEAAAATAAYAAAAJAAEAAAATAAUAAAAJAAEAAAATAAQAAAAJAAEAAAATAAMAAAAJAAEAAAATAAIAAAAJAAEAAAATAAEAAAAJAAEAAAATAAAAAAAJAAEAAAATAP//AAAJAAAAAAASAAoAAAAIAAIAAAASAAkAAAAIAAEAAAASAAgAAAAIAAEAAAASAAcAAAAIAAEAAAASAAYAAAAIAAEAAAASAAUAAAAIAAEAAAASAAQAAAAIAAEAAAASAAMAAAAIAAEAAAASAAIAAAAIAAEAAAASAAEAAAAIAAEAAAASAAAAAAAIAAEAAAASAP//AAAIAAAAAAARAAoAAAAIAAIAAAARAAkAAAAIAAEAAAARAAgAAAAIAAEAAAARAAcAAAAIAAEAAAARAAYAAAAIAAEAAAARAAUAAAAIAAEAAAARAAQAAAAIAAEAAAARAAMAAAAIAAEAAAARAAIAAAAIAAEAAAARAAEAAAAIAAEAAAARAAAAAAAIAAEAAAARAP//AAAIAAAAAAAQAAoAAAAIAAIAAAAQAAkAAAAIAAEAAAAQAAgAAAAIAAEAAAAQAAcAAAAIAAEAAAAQAAYAAAAIAAEAAAAQAAUAAAAIAAEAAAAQAAQAAAAIAAEAAAAQAAMAAAAIAAEAAAAQAAIAAAAIAAEAAAAQAAEAAAAIAAEAAAAQAAAAAAAIAAEAAAAQAP//AAAIAAAAAAAPAAoAAAAIAAIAAAAPAAkAAAAIAAEAAAAPAAgAAAAIAAEAAAAPAAcAAAAIAAEAAAAPAAYAAAAIAAEAAAAPAAUAAAAIAAEAAAAPAAQAAAAIAAEAAAAPAAMAAAAIAAEAAAAPAAIAAAAIAAEAAAAPAAEAAAAIAAEAAAAPAAAAAAAIAAEAAAAPAP//AAAIAAAAAAAOAAoAAAAIAAIAAAAOAAkAAAAIAAEAAAAOAAgAAAAIAAEAAAAOAAcAAAAIAAEAAAAOAAYAAAAIAAEAAAAOAAUAAAAIAAEAAAAOAAQAAAAIAAEAAAAOAAMAAAAIAAEAAAAOAAIAAAAIAAEAAAAOAAEAAAAIAAEAAAAOAAAAAAAIAAEAAAAOAP//AAAIAAAAAAANAAoAAAAIAAIAAAANAAkAAAAIAAEAAAANAAgAAAAIAAEAAAANAAcAAAAIAAEAAAANAAYAAAAIAAEAAAANAAUAAAAIAAEAAAANAAQAAAAIAAEAAAANAAMAAAAIAAEAAAANAAIAAAAIAAEAAAANAAEAAAAIAAEAAAANAAAAAAAIAAEAAAANAP//AAAIAAAAAAAMAAoAAAAIAAIAAAAMAAkAAAAIAAEAAAAMAAgAAAAIAAEAAAAMAAcAAAAIAAEAAAAMAAYAAAAIAAEAAAAMAAUAAAAIAAEAAAAMAAQAAAAIAAEAAAAMAAMAAAAIAAEAAAAMAAIAAAAIAAEAAAAMAAEAAAAIAAEAAAAMAAAAAAAIAAEAAAAMAP//AAAIAAAAAAALAAoAAAAIAAIAAAALAAkAAAAIAAEAAAALAAgAAAAIAAEAAAALAAcAAAAIAAEAAAALAAYAAAAIAAEAAAALAAUAAAAIAAEAAAALAAQAAAAIAAEAAAALAAMAAAAIAAEAAAALAAIAAAAIAAEAAAALAAEAAAAIAAEAAAALAAAAAAAIAAEAAAALAP//AAAIAAAAAAAKAAoAAAAIAAIAAAAKAAkAAAAIAAEAAAAKAAgAAAAIAAEAAAAKAAcAAAAIAAEAAAAKAAYAAAAIAAEAAAAKAAUAAAAIAAEAAAAKAAQAAAAIAAEAAAAKAAMAAAAIAAEAAAAKAAIAAAAIAAEAAAAKAAEAAAAIAAEAAAAKAAAAAAAIAAEAAAAKAP//AAAIAAAAAAAJAAoAAAAIAAIAAAAJAAkAAAAIAAEAAAAJAAgAAAAIAAEAAAAJAAcAAAAIAAEAAAAJAAYAAAAIAAEAAAAJAAUAAAAIAAEAAAAJAAQAAAAIAAEAAAAJAAMAAAAIAAEAAAAJAAIAAAAIAAEAAAAJAAEAAAAIAAEAAAAJAAAAAAAIAAEAAAAJAP//AAAIAAAAAAAIAAoAAAAIAAIAAAAIAAkAAAAIAAEAAAAIAAgAAAAIAAEAAAAIAAcAAAAIAAEAAAAIAAYAAAAIAAEAAAAIAAUAAAAIAAEAAAAIAAQAAAAIAAEAAAAIAAMAAAAIAAEAAAAIAAIAAAAIAAEAAAAIAAEAAAAIAAEAAAAIAAAAAAAIAAEAAAAIAP//AAAIAAAAAAAHAAoAAAAIAAIAAAAHAAkAAAAIAAEAAAAHAAgAAAAIAAEAAAAHAAcAAAAIAAEAAAAHAAYAAAAIAAEAAAAHAAUAAAAIAAEAAAAHAAQAAAAIAAEAAAAHAAMAAAAIAAEAAAAHAAIAAAAIAAEAAAAHAAEAAAAIAAEAAAAHAAAAAAAIAAEAAAAHAP//AAAIAAAAAAAGAAoAAAAIAAIAAAAGAAkAAAAIAAEAAAAGAAgAAAAIAAEAAAAGAAcAAAAIAAEAAAAGAAYAAAAIAAEAAAAGAAUAAAAIAAEAAAAGAAQAAAAIAAEAAAAGAAMAAAAIAAEAAAAGAAIAAAAIAAEAAAAGAAEAAAAIAAEAAAAGAAAAAAAIAAEAAAAGAP//AAAIAAAAAAAFAAoAAAAIAAIAAAAFAAkAAAAIAAEAAAAFAAgAAAAIAAEAAAAFAAcAAAAIAAEAAAAFAAYAAAAIAAEAAAAFAAUAAAAIAAEAAAAFAAQAAAAIAAEAAAAFAAMAAAAIAAEAAAAFAAIAAAAIAAEAAAAFAAEAAAAIAAEAAAAFAAAAAAAIAAEAAAAFAP//AAAIAAAAAAAEAAoAAAAIAAIAAAAEAAkAAAAIAAEAAAAEAAgAAAAIAAEAAAAEAAcAAAAIAAEAAAAEAAYAAAAIAAEAAAAEAAUAAAAIAAEAAAAEAAQAAAAIAAEAAAAEAAMAAAAIAAEAAAAEAAIAAAAIAAEAAAAEAAEAAAAIAAEAAAAEAAAAAAAIAAEAAAAEAP//AAAIAAAAAAADAAoAAAAIAAIAAAADAAkAAAAIAAEAAAADAAgAAAAIAAEAAAADAAcAAAAIAAEAAAADAAYAAAAIAAEAAAADAAUAAAAIAAEAAAADAAQAAAAIAAEAAAADAAMAAAAIAAEAAAADAAIAAAAIAAEAAAADAAEAAAAIAAEAAAADAAAAAAAIAAEAAAADAP//AAAIAAAAAAACAAoAAAAIAAIAAAACAAkAAAAIAAEAAAACAAgAAAAIAAEAAAACAAcAAAAIAAEAAAACAAYAAAAIAAEAAAACAAUAAAAIAAEAAAACAAQAAAAIAAEAAAACAAMAAAAIAAEAAAACAAIAAAAIAAEAAAACAAEAAAAIAAEAAAACAAAAAAAIAAEAAAACAP//AAAIAAAAAAABAAoAAAAIAAIAAAABAAkAAAAIAAEAAAABAAgAAAAIAAEAAAABAAcAAAAIAAEAAAABAAYAAAAIAAEAAAABAAUAAAAIAAEAAAABAAQAAAAIAAEAAAABAAMAAAAIAAEAAAABAAIAAAAIAAEAAAABAAEAAAAIAAEAAAABAAAAAAAIAAEAAAABAP//AAAIAAAAAAAAAAoAAAAIAAIAAAAAAAkAAAAIAAEAAAAAAAgAAAAIAAEAAAAAAAcAAAAIAAEAAAAAAAYAAAAIAAEAAAAAAAUAAAAIAAEAAAAAAAQAAAAIAAEAAAAAAAMAAAAIAAEAAAAAAAIAAAAIAAEAAAAAAAEAAAAIAAEAAAAAAAAAAAAIAAEAAAAAAP//AAAIAAAAAAD//woAAAAIAAIAAAD//wkAAAAIAAEAAAD//wgAAAAIAAEAAAD//wcAAAAIAAEAAAD//wYAAAAIAAEAAAD//wUAAAAIAAEAAAD//wQAAAAIAAEAAAD//wMAAAAIAAEAAAD//wIAAAAIAAEAAAD//wEAAAAIAAEAAAD//wAAAAAIAAEAAAD/////AAAIAAAAAAD+/woAAAAHAAIAAAD+/wkAAAAHAAEAAAD+/wgAAAAHAAEAAAD+/wcAAAAHAAEAAAD+/wYAAAAHAAEAAAD+/wUAAAAHAAEAAAD+/wQAAAAHAAEAAAD+/wMAAAAHAAEAAAD+/wIAAAAHAAEAAAD+/wEAAAAHAAEAAAD+/wAAAAAHAAEAAAD+////AAAHAAAAAAA=")
tile_set = ExtResource("1_8kl0y")

[node name="Sign" parent="." instance=ExtResource("4_ls2sr")]
position = Vector2(576, 64)
dialog = Array[String](["You did it, you fixed the sign :D", "Thanks for playing!"])

[node name="RpgCharacter" parent="." instance=ExtResource("2_4x5x6")]
position = Vector2(576, 320)

[connection signal="dialog_finished" from="Sign" to="." method="_on_sign_dialog_finished"]
[connection signal="interactable_interaction_attempted" from="RpgCharacter" to="." method="_on_rpg_character_interactable_interaction_attempted"]
